# 7cups-musicproject

./: build.sh  db.sqlite3  delete.http  keepalive.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
dbbackup/: db_data.json
music/: settings.py  urls.py  wsgi.py
staticfiles/stream/: index.js  keepalive.py  requests.js  styles.css
stream/: admin.py  models.py  search.http  token.http  urls.py  views.py
stream/migrations/: 0001_initial.py  0002_song_image300_song_image600_song_image64_and_more.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_remove_user_date_joined.py  0005_alter_user_options_alter_user_managers_and_more.py  0006_song_added_to_playlist.py
stream/static/stream/: index.js  requests.js  styles.css
stream/templates/stream/: directory_list.html  index.html  layout.html  login.html  player.html  requests.html
