[tool.poetry]
name = "music"
version = "0.1.0"
description = ""
authors = ["Mahad Hashmi <mahad.python@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<=3.11"
django = ">=3.0,<4.0"
spotdl = ">=4.0,<5.0"
requests = "^2.31.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
